--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -5,6 +5,7 @@
         "profile_name": "tesselo",
         "project_name": "pixels",
         "runtime": "python3.6",
-        "s3_bucket": "zappa-pixels"
+        "s3_bucket": "zappa-pixels",
+        "slim_handler": true
     }
 }
