--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,11 +1,15 @@
 {
     "dev": {
-        "app_function": "pixels.app",
+        "app_function": "pixels.app.pixels",
         "aws_region": "eu-central-1",
         "profile_name": "tesselo",
         "project_name": "pixels",
         "runtime": "python3.6",
         "s3_bucket": "zappa-pixels",
-        "slim_handler": true
+        "slim_handler": true,
+        "environment_variables": {
+            "GDAL_DATA": "/var/venv/lib/python3.6/site-packages/rasterio/gdal_data",
+            "PROJ_DATA": "/var/venv/lib/python3.6/site-packages/rasterio/proj_data"
+      }
     }
 }
