--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -14,6 +14,7 @@
         "memory_size": 1024
     },
     "production": {
+      "log_level": "WARNING",
       "extends": "dev",
       "domain": "pixels.tesselo.com",
     }
