Started merging next version of pixel collector.

--- a/batch/docker/Dockerfile
+++ b/batch/docker/Dockerfile
@@ -1,23 +1,25 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
+
+ENV DEBIAN_FRONTEND=noninteractive
+
 # https://aws.amazon.com/blogs/compute/creating-a-simple-fetch-and-run-aws-batch-job/
+
 RUN apt-get -y update\
   && apt-get -y upgrade\
-  && apt-get install -y python3-pip zip\
-  && pip3 install\
-  Keras==2.2.4\
-  tensorflow==1.13.1\
-  scipy==1.2.1\
-  scikit-learn==0.20.3\
-  awscli==1.16.150\
-  boto3==1.9.140\
-  rasterio==1.0.22\
-  Pillow==6.0.0\
-  requests==2.21\
-  pyproj==1.9.6\
-  shapely==1.6.4.post2\
-  geopandas==0.5.0\
-  Fiona==1.8.6\
-  geodaisy==0.1.1
+  && apt-get install -y python3-pip zip software-properties-common
+
+RUN add-apt-repository ppa:ubuntugis/ubuntugis-unstable\
+  && apt-get -y update\
+  && apt-get -y install gdal-bin libgdal-dev
+
+RUN pip3 install rasterio --no-binary rasterio
+
+ENV GDAL_DISABLE_READDIR_ON_OPEN=YES
+ENV CPL_VSIL_CURL_ALLOWED_EXTENSIONS=.tif
+ENV CURL_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
+
+RUN pip3 install boto3
+RUN pip3 install Fiona==1.8.14
 
 ADD fetch_and_run.sh /usr/local/bin/fetch_and_run.sh
 RUN chmod +x /usr/local/bin/fetch_and_run.sh
