Adapted requirements to new search mechanism.

--- a/batch/docker/Dockerfile
+++ b/batch/docker/Dockerfile
@@ -12,26 +12,24 @@ RUN add-apt-repository ppa:ubuntugis/ubuntugis-unstable\
   && apt-get -y update\
   && apt-get -y install gdal-bin libgdal-dev
 
-RUN pip3 install rasterio --no-binary rasterio
-
 ENV GDAL_DISABLE_READDIR_ON_OPEN=YES
 ENV CPL_VSIL_CURL_ALLOWED_EXTENSIONS=.tif
 ENV CURL_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
-
-RUN pip3 install boto3
-RUN pip3 install Fiona==1.8.14
 
 ADD fetch_and_run.sh /usr/local/bin/fetch_and_run.sh
 RUN chmod +x /usr/local/bin/fetch_and_run.sh
 WORKDIR /tmp
 ENTRYPOINT ["/usr/local/bin/fetch_and_run.sh"]
 
+RUN pip3 install rasterio --no-binary rasterio
+
 RUN pip3 install\
   awscli\
   Pillow\
   requests\
-  pyproj
-
-RUN pip3 install sat-stac
-
-RUN pip3 install tensorflow
+  pyproj\
+  boto3\
+  Fiona\
+  SQLAlchemy\
+  tensorflow\
+  psycopg2-binary
