--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-rasterio==1.0.22
-requests==2.21
-pyproj==1.9.6
-Flask==1.0.2
-zappa==0.48.2
-Pillow==6.0.0
-Flask-SQLAlchemy==2.3.2
-psycopg2-binary==2.8.2
+rasterio==1.1.8
+requests==2.25.0
+pyproj==3.0.0
+Flask==1.1.2
+zappa==0.52.0
+Pillow==8.0.1
+Flask-SQLAlchemy==2.4.4
+psycopg2-binary==2.8.6
+Pillow==8.0.1
+python-dateutil==2.8.1
+Fiona==1.8.17
