--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,6 @@ ignore=E123,E128,E402,E501,W503,E731,W601,E722,W606
 max-line-length=119
 
 [isort]
-multi_line_output = 5
-line_length=119
+multi_line_output=3
+include_trailing_comma=True
+line_length=88
