--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,7 +1,11 @@
 name: Super-Linter
 
 # Run this workflow every time a new commit pushed to your repository
-on: push
+on:
+  push:
+    branches-ignore: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   # Set the job key. The key is displayed as the job name
