--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -27,3 +27,6 @@ jobs:
         env:
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_PYTHON_FLAKE8: true
+          VALIDATE_PYTHON_ISORT: true
+          VALIDATE_PYTHON_BLACK: true
