--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 rasterio==1.1.8
-requests==2.25.0
-pyproj==3.0.0
 Flask==1.1.2
 zappa==0.52.0
-Pillow==8.0.1
 Flask-SQLAlchemy==2.4.4
-psycopg2-binary==2.8.6
-Pillow==8.0.1
-python-dateutil==2.8.1
-Fiona==1.8.17
+pg8000==1.16.5
+mercantile==1.1.6
