--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -9,12 +9,8 @@
         "domain": "devpixels.tesselo.com",
         "certificate_arn": "arn:aws:acm:us-east-1:595064993071:certificate/3cac1dfe-5915-4325-91fa-a53952cbd2e1",
         "log_level": "INFO",
-        "timeout_seconds": 600,
-        "memory_size": 3008,
-        "environment_variables": {
-          "GDAL_DISABLE_READDIR_ON_OPEN": "YES",
-          "CPL_VSIL_CURL_ALLOWED_EXTENSIONS": ".tif,.jp2"
-        }
+        "timeout_seconds": 30,
+        "memory_size": 512
     },
     "production": {
       "log_level": "WARNING",
