--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 exclude=build,.git,scripts/
-ignore=E123,E128,E402,E501,W503,E731,W601,E722,W606
+ignore=E123,E128,E203,E402,E501,W503,E731,W601,E722,W606
 max-line-length=119
 
 [isort]
