Fixed generator for normal training mode.

--- a/batch/docker/Dockerfile
+++ b/batch/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:20.04
+#FROM 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:2.3.1-gpu-py37-cu110-ubuntu18.04
 
 # Fetch-and-run setup.
 # https://aws.amazon.com/blogs/compute/creating-a-simple-fetch-and-run-aws-batch-job/
@@ -10,12 +11,11 @@ ENTRYPOINT ["/usr/local/bin/fetch_and_run.sh"]
 # Environment.
 ENV DEBIAN_FRONTEND=noninteractive
 ENV GDAL_DISABLE_READDIR_ON_OPEN=YES
-ENV CPL_VSIL_CURL_ALLOWED_EXTENSIONS=.tif
+ENV CPL_VSIL_CURL_ALLOWED_EXTENSIONS=.tif,.jp2
 ENV CURL_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
 
 # Apt dependencies.
 RUN apt-get -y update\
-  && apt-get -y upgrade\
   && apt-get install -y software-properties-common\
   && add-apt-repository ppa:ubuntugis/ubuntugis-unstable\
   && apt-get -y update\
