Added batch prediction script and adapted the docker image for it.

--- a/batch/docker/Dockerfile
+++ b/batch/docker/Dockerfile
@@ -1,5 +1,7 @@
-FROM ubuntu:20.04
+#FROM ubuntu:20.04
 #FROM 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:2.3.1-gpu-py37-cu110-ubuntu18.04
+FROM 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:2.3.1-gpu-py37-cu102-ubuntu18.04
+#List of aws images https://github.com/aws/deep-learning-containers/blob/master/available_images.md
 
 # Fetch-and-run setup.
 # https://aws.amazon.com/blogs/compute/creating-a-simple-fetch-and-run-aws-batch-job/
@@ -19,17 +21,17 @@ RUN apt-get -y update\
   && apt-get install -y software-properties-common\
   && add-apt-repository ppa:ubuntugis/ubuntugis-unstable\
   && apt-get -y update\
-  && apt-get -y install python3-pip zip gdal-bin libgdal-dev
+  && apt-get -y install zip gdal-bin libgdal-dev
 
 # Install rasterio without the binaries (use gdal from ubuntugis).
-RUN pip3 install rasterio --no-binary rasterio
+RUN pip install rasterio --no-binary rasterio
 
 # Pip dependencies.
-RUN pip3 install\
+RUN pip install\
   awscli\
   boto3\
+  matplotlib\
   Fiona\
   SQLAlchemy\
-  tensorflow\
   pg8000==1.16.5\
-  mercantile==1.1.6
+  mercantile
