Reduced number of superlinter runs to only pull requests.

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -3,7 +3,7 @@ name: Super-Linter
 # Run this workflow every time a new commit pushed to your repository
 on:
   push:
-    branches-ignore: [master]
+    branches: []
   pull_request:
     branches: [master]
 
