--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -30,6 +30,7 @@ jobs:
           VALIDATE_PYTHON_FLAKE8: true
           VALIDATE_PYTHON_ISORT: true
           VALIDATE_PYTHON_BLACK: true
+          LINTER_RULES_PATH: /
           PYTHON_BLACK_CONFIG_FILE: setup.cfg
           PYTHON_FLAKE8_CONFIG_FILE: setup.cfg
           PYTHON_ISORT_CONFIG_FILE: setup.cfg
