--- a/batch/docker/Dockerfile
+++ b/batch/docker/Dockerfile
@@ -24,17 +24,18 @@ RUN apt-get -y update\
   && apt-get -y install zip gdal-bin libgdal-dev
 
 # Install rasterio without the binaries (use gdal from ubuntugis).
-RUN pip install rasterio --no-binary rasterio
+RUN pip install rasterio==1.2.0 --no-binary rasterio
 
 # Pip dependencies.
 RUN pip install\
-  awscli\
-  boto3\
-  matplotlib\
-  Fiona\
-  SQLAlchemy\
-  pg8000==1.16.5\
-  mercantile\
-  pystac\
-  jsonschema\
-  geopandas
+  awscli==1.19.13\
+  boto3==1.17.13\
+  matplotlib==3.3.4\
+  Fiona==1.8.18\
+  SQLAlchemy==1.3.23\
+  pg8000==1.17.0\
+  mercantile==1.1.6\
+  pystac==0.5.4\
+  jsonschema==3.2.0\
+  numpy==1.20.1\
+  geopandas==0.8.2
