--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -1,11 +1,16 @@
-name: Lint and test pixels
+name: Continuous Integration for Pixels
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
-    branches: [master]
+    branches:
+      - main
 
 jobs:
-  run-tests:
+  test:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest isort black flake8
+          pip install -r dev_requirements.txt
           pip install -r requirements.txt
       - name: Lint with Flake8
         run: flake8 .
@@ -26,3 +31,14 @@ jobs:
         run: black --check --diff .
       - name: Run tests
         run: pytest
+
+  deploy:
+    name: Deploy
+    needs: [test]
+    runs-on: ubuntu-latest
+    if: contains('refs/heads/main', github.ref)
+    steps:
+      run: echo "Build me"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
