--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 rasterio==1.2.0
 zappa==0.52.0
-Flask-SQLAlchemy==2.4.4
-pg8000==1.16.5
+pg8000==1.18.0
+SQLAlchemy==1.4.0
 mercantile==1.1.6
 pystac==0.5.4
 jsonschema==3.2.0
