--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -43,6 +43,8 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
+      - name: Install awscli
+        run: pip install awscli
       - name: Deploy to batch
         run: ./build_batch.sh
         env:
