Added sentry integration for handled exceptions

--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,10 @@
-rasterio==1.2.0
-zappa==0.52.0
-pg8000==1.18.0
-SQLAlchemy==1.4.0
-mercantile==1.1.6
-pystac==0.5.4
-jsonschema==3.2.0
-pyparsing==2.4.7
 h5py==2.10.0
+jsonschema==3.2.0
+mercantile==1.1.6
+pg8000==1.18.0
+pyparsing==2.4.7
+pystac==0.5.4
+rasterio==1.2.0
+sentry-sdk
+SQLAlchemy==1.4.0
+zappa==0.52.0
