--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ attrs==21.2.0
     # via
     #   jsonschema
     #   rasterio
-boto3==1.17.68
+boto3==1.17.71
     # via
     #   kappa
     #   zappa
-botocore==1.20.68
+botocore==1.20.71
     # via
     #   boto3
     #   s3transfer
@@ -26,6 +26,7 @@ certifi==2020.12.5
     # via
     #   rasterio
     #   requests
+    #   sentry-sdk
 cfn-flip==1.2.3
     # via troposphere
 chardet==4.0.0
@@ -66,7 +67,7 @@ kappa==0.6.0
     # via zappa
 mercantile==1.1.6
     # via -r requirements.in
-numpy==1.20.2
+numpy==1.20.3
     # via
     #   h5py
     #   rasterio
@@ -107,6 +108,8 @@ s3transfer==0.4.2
     # via boto3
 scramp==1.2.2
     # via pg8000
+sentry-sdk==1.1.0
+    # via -r requirements.in
 six==1.16.0
     # via
     #   cfn-flip
@@ -132,6 +135,7 @@ urllib3==1.26.4
     # via
     #   botocore
     #   requests
+    #   sentry-sdk
 werkzeug==0.16.1
     # via zappa
 wheel==0.36.2
