--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -9,8 +9,28 @@ on:
       - main
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Python 3
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r dev_requirements.txt
+      - name: Lint with Flake8
+        run: flake8 .
+      - name: Lint with isort
+        run: isort --check --diff .
+      - name: Lint with black
+        run: black --check --diff .
+
   test:
-    name: Lint and Test
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,6 +43,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r dev_requirements.txt
           pip install -r requirements.txt
+          pip install -r batch/docker/requirements.txt
+          pip install -r batch/docker/rasterio_requirements.txt
+          pip install -r batch/docker/tensorflow_requirements.txt
       - name: Lint with Flake8
         run: flake8 .
       - name: Lint with isort
@@ -34,7 +57,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: [test]
+    needs: [lint, test]
     runs-on: ubuntu-latest
     if: contains('refs/heads/main', github.ref)
     steps:
