--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -21,6 +21,7 @@ certifi==2020.12.5
     # via
     #   fiona
     #   pyproj
+    #   sentry-sdk
 click-plugins==1.1.1
     # via fiona
 click==7.1.2
@@ -99,6 +100,8 @@ s3transfer==0.3.7
     #   boto3
 scramp==1.2.0
     # via pg8000
+sentry-sdk==1.1.0
+    # via -r ./batch/docker/requirements.in
 shapely==1.7.1
     # via geopandas
 six==1.16.0
@@ -111,8 +114,14 @@ six==1.16.0
     #   python-dateutil
 sqlalchemy==1.3.23
     # via -r ./batch/docker/requirements.in
+tensorflow-addons==0.12.1
+    # via -r ./batch/docker/requirements.in
+typeguard==2.12.0
+    # via tensorflow-addons
 urllib3==1.26.4
-    # via botocore
+    # via
+    #   botocore
+    #   sentry-sdk
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
