--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ attrs==21.2.0
     # via
     #   jsonschema
     #   rasterio
-certifi==2020.12.5
+backoff==1.10.0
+    # via -r requirements.in
+certifi==2021.5.30
     # via
     #   rasterio
     #   sentry-sdk
@@ -24,7 +26,7 @@ click==7.1.2
     #   cligj
     #   mercantile
     #   rasterio
-cligj==0.7.1
+cligj==0.7.2
     # via rasterio
 greenlet==1.1.0
     # via sqlalchemy
@@ -66,7 +68,7 @@ snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.4.0
     # via -r requirements.in
-urllib3==1.26.4
+urllib3==1.26.5
     # via sentry-sdk
 
 # The following packages are considered to be unsafe in a requirements file:
