--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ jsonschema==3.2.0
     # via -r requirements.in
 mercantile==1.1.6
     # via -r requirements.in
-numpy==1.20.3
+numpy==1.21.0
     # via
     #   h5py
     #   rasterio
@@ -47,7 +47,7 @@ pyparsing==2.4.7
     # via
     #   -r requirements.in
     #   snuggs
-pyrsistent==0.17.3
+pyrsistent==0.18.0
     # via jsonschema
 pystac==0.5.4
     # via -r requirements.in
@@ -57,7 +57,7 @@ rasterio==1.2.3
     # via -r requirements.in
 scramp==1.2.2
     # via pg8000
-sentry-sdk==1.1.0
+sentry-sdk==1.3.0
     # via -r requirements.in
 six==1.16.0
     # via
@@ -68,7 +68,9 @@ snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.4.0
     # via -r requirements.in
-urllib3==1.26.5
+structlog==21.1.0
+    # via -r requirements.in
+urllib3==1.26.6
     # via sentry-sdk
 
 # The following packages are considered to be unsafe in a requirements file:
