--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -15,7 +15,7 @@ attrs==21.2.0
     #   rasterio
 awscli==1.19.13
     # via -r ./batch/docker/requirements.in
-backoff==1.10.0
+backoff==1.11.1
     # via -r ./batch/docker/requirements.in
 boto3==1.17.13
     # via -r ./batch/docker/requirements.in
@@ -73,7 +73,7 @@ mercantile==1.1.6
     # via -r ./batch/docker/requirements.in
 munch==2.5.0
     # via fiona
-numpy==1.20.3
+numpy==1.21.0
     # via
     #   -r ./batch/docker/requirements.in
     #   h5py
@@ -81,11 +81,11 @@ numpy==1.20.3
     #   pandas
     #   rasterio
     #   snuggs
-pandas==1.2.4
+pandas==1.3.0
     # via geopandas
 pg8000==1.16.5
     # via -r ./batch/docker/requirements.in
-pillow==8.2.0
+pillow==8.3.1
     # via matplotlib
 pyasn1==0.4.8
     # via rsa
@@ -95,11 +95,11 @@ pyparsing==2.4.7
     #   snuggs
 pyproj==3.1.0
     # via geopandas
-pyrsistent==0.17.3
+pyrsistent==0.18.0
     # via jsonschema
 pystac==0.5.4
     # via -r ./batch/docker/requirements.in
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via
     #   botocore
     #   matplotlib
@@ -119,7 +119,7 @@ s3transfer==0.3.7
     #   boto3
 scramp==1.2.0
     # via pg8000
-sentry-sdk==1.1.0
+sentry-sdk==1.3.0
     # via -r ./batch/docker/requirements.in
 shapely==1.7.1
     # via geopandas
@@ -135,11 +135,13 @@ snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.3.23
     # via -r ./batch/docker/requirements.in
+structlog==21.1.0
+    # via -r ./batch/docker/requirements.in
 tensorflow-addons==0.12.1
     # via -r ./batch/docker/requirements.in
-typeguard==2.12.0
+typeguard==2.12.1
     # via tensorflow-addons
-urllib3==1.26.5
+urllib3==1.26.6
     # via
     #   botocore
     #   sentry-sdk
