--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ attrs==21.2.0
     # via
     #   jsonschema
     #   rasterio
-backoff==1.10.0
+backoff==1.11.1
     # via -r requirements.in
 certifi==2021.5.30
     # via
@@ -37,7 +37,7 @@ jsonschema==3.2.0
     # via -r requirements.in
 mercantile==1.1.6
     # via -r requirements.in
-numpy==1.21.0
+numpy==1.21.1
     # via
     #   h5py
     #   rasterio
@@ -52,14 +52,16 @@ pyrsistent==0.18.0
     # via jsonschema
 pystac==0.5.4
     # via -r requirements.in
-python-dateutil==2.8.1
+python-dateutil==2.8.2
     # via pystac
 rasterio==1.2.3
     # via -r requirements.in
 scramp==1.2.2
     # via pg8000
-sentry-sdk==1.3.0
-    # via -r requirements.in
+sentry-sdk==1.3.1
+    # via
+    #   -r requirements.in
+    #   structlog-sentry
 six==1.16.0
     # via
     #   h5py
@@ -68,6 +70,8 @@ six==1.16.0
 snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.4.0
+    # via -r requirements.in
+structlog-sentry==1.4.0
     # via -r requirements.in
 structlog==21.1.0
     # via -r requirements.in
