--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ nosetests.xml
 coverage.xml
 *,cover
 .hypothesis/
+reports/
 
 # Translations
 *.mo
@@ -80,3 +81,6 @@ frontend/js/dist.js
 
 # Frontend app html (comes from other repo).
 tesselo/templates/app.html
+
+# Pycharm / intellidea
+.idea
