--- a/batch/docker/requirements.in
+++ b/batch/docker/requirements.in
@@ -6,21 +6,20 @@
 # https://github.com/tlocke/pg8000/issues/53
 --no-binary rasterio
 
-awscli==1.19.13
-boto3==1.17.13
+awscli
+boto3
 matplotlib==3.3.4
 Fiona
 SQLAlchemy==1.3.23
 pg8000==1.16.5
-mercantile==1.1.6
 pystac==0.5.4
 jsonschema==3.2.0
 numpy>1.20
-geopandas==0.8.2
-h5py==2.10.0
+geopandas
+h5py
 tensorflow-addons==0.12.1
 sentry-sdk
-rasterio==1.2.3
+rasterio
 backoff
 structlog
 structlog-sentry
