--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,8 @@
 h5py==2.10.0
-jsonschema==3.2.0
-mercantile==1.1.6
 pg8000==1.18.0
-pyparsing==2.4.7
+pyparsing
 pystac==0.5.4
-rasterio==1.2.3
+rasterio
 sentry-sdk
 SQLAlchemy==1.4.0
 backoff
