--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
-h5py==2.10.0
-pg8000==1.18.0
+h5py==2.10.0  # Pinned for backwards compatability of our model objects.
+pg8000
 pyparsing
 pystac==0.5.4
 rasterio
