--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -8,18 +8,20 @@
 
 affine==2.3.0
     # via rasterio
+asn1crypto==1.4.0
+    # via scramp
 attrs==21.2.0
     # via
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.22.8
+awscli==1.22.22
     # via -r ./batch/docker/requirements.in
 backoff==1.11.1
     # via -r ./batch/docker/requirements.in
-boto3==1.20.8
+boto3==1.20.22
     # via -r ./batch/docker/requirements.in
-botocore==1.23.8
+botocore==1.23.22
     # via
     #   awscli
     #   boto3
@@ -57,7 +59,7 @@ fiona==1.8.20
     #   geopandas
 geopandas==0.10.2
     # via -r ./batch/docker/requirements.in
-h5py==3.6.0
+h5py==2.10.0
     # via -r ./batch/docker/requirements.in
 jmespath==0.10.0
     # via
@@ -82,20 +84,22 @@ numpy==1.21.4
     #   snuggs
 pandas==1.3.4
     # via geopandas
-pg8000==1.16.5
+pg8000==1.23.0
     # via -r ./batch/docker/requirements.in
 pillow==8.4.0
     # via matplotlib
 pyasn1==0.4.8
     # via rsa
-pygeos==0.11.1
+pygeos==0.12.0
     # via -r ./batch/docker/requirements.in
 pyparsing==3.0.6
     # via
     #   matplotlib
     #   snuggs
-pyproj==3.3.0
-    # via geopandas
+pyproj==3.2.1
+    # via
+    #   -r ./batch/docker/requirements.in
+    #   geopandas
 pyrsistent==0.18.0
     # via jsonschema
 pystac==0.5.4
@@ -118,7 +122,7 @@ s3transfer==0.5.0
     # via
     #   awscli
     #   boto3
-scramp==1.2.0
+scramp==1.4.1
     # via pg8000
 sentry-sdk==1.5.0
     # via
@@ -129,6 +133,7 @@ shapely==1.8.0
 six==1.16.0
     # via
     #   fiona
+    #   h5py
     #   jsonschema
     #   munch
     #   python-dateutil
@@ -136,13 +141,13 @@ snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.3.23
     # via -r ./batch/docker/requirements.in
-structlog==21.2.0
+structlog==21.4.0
     # via -r ./batch/docker/requirements.in
 structlog-sentry==1.4.0
     # via -r ./batch/docker/requirements.in
 tensorflow-addons==0.12.1
     # via -r ./batch/docker/requirements.in
-typeguard==2.13.0
+typeguard==2.13.2
     # via tensorflow-addons
 urllib3==1.26.7
     # via
