chore(requirements): upgrade batch requirements

--- a/batch/docker/requirements.in
+++ b/batch/docker/requirements.in
@@ -7,7 +7,6 @@ SQLAlchemy
 pg8000
 pystac==0.5.4
 jsonschema==3.2.0
-numpy>1.20
 geopandas
 pyproj==3.2.1
 h5py
@@ -21,3 +20,8 @@ click
 pygeos
 h5py==2.10.0
 tqdm
+
+# The following libraries require python3.8
+numpy<1.19
+pandas<1.4.0
+urllib3<1.26
