chore(batch): unpin and upgrade libraries
We are now running Python 3.8 so we can unpin numpy, pandas, and urllib3.

--- a/batch/docker/requirements.in
+++ b/batch/docker/requirements.in
@@ -20,8 +20,6 @@ click
 pygeos
 h5py==2.10.0
 tqdm
-
-# The following libraries require python3.8
-numpy<1.19
-pandas<1.4.0
-urllib3<1.26
+numpy
+pandas
+urllib3
