--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=./requirements.txt requirements.in
 #
-affine==2.3.0
+affine==2.3.1
     # via rasterio
-asn1crypto==1.4.0
+asn1crypto==1.5.1
     # via scramp
 attrs==21.4.0
     # via
@@ -20,7 +20,7 @@ certifi==2021.10.8
     #   pyproj
     #   rasterio
     #   sentry-sdk
-click==8.0.3
+click==8.1.2
     # via
     #   -r requirements.in
     #   click-plugins
@@ -37,6 +37,8 @@ cligj==0.7.2
     #   rasterio
 fiona==1.8.21
     # via geopandas
+geojson-pydantic==0.3.3
+    # via -r requirements.in
 geopandas==0.10.2
     # via -r requirements.in
 greenlet==1.1.2
@@ -45,16 +47,20 @@ h5py==2.10.0
     # via -r requirements.in
 munch==2.5.0
     # via fiona
-numpy==1.22.2
+numpy==1.22.3
     # via
     #   h5py
     #   pandas
     #   rasterio
     #   snuggs
-pandas==1.4.1
+pandas==1.4.2
     # via geopandas
-pg8000==1.24.0
+pg8000==1.24.1
     # via -r requirements.in
+pydantic==1.9.0
+    # via
+    #   -r requirements.in
+    #   geojson-pydantic
 pyparsing==3.0.7
     # via
     #   -r requirements.in
@@ -67,17 +73,17 @@ python-dateutil==2.8.2
     # via
     #   pandas
     #   pystac
-pytz==2021.3
+pytz==2022.1
     # via pandas
 rasterio==1.2.10
     # via -r requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.5.5
+sentry-sdk==1.5.8
     # via
     #   -r requirements.in
     #   structlog-sentry
-shapely==1.8.0
+shapely==1.8.1.post1
     # via geopandas
 six==1.16.0
     # via
@@ -86,13 +92,15 @@ six==1.16.0
     #   python-dateutil
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.31
+sqlalchemy==1.4.34
     # via -r requirements.in
 structlog==21.5.0
     # via -r requirements.in
 structlog-sentry==1.4.0
     # via -r requirements.in
-urllib3==1.26.8
+typing-extensions==4.1.1
+    # via pydantic
+urllib3==1.26.9
     # via sentry-sdk
 
 # The following packages are considered to be unsafe in a requirements file:
