--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -6,7 +6,7 @@
 #
 --no-binary rasterio
 
-affine==2.3.0
+affine==2.3.1
     # via rasterio
 asn1crypto==1.5.1
     # via scramp
@@ -15,13 +15,13 @@ attrs==21.4.0
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.22.75
+awscli==1.23.4
     # via -r ./batch/docker/requirements.in
-backoff==1.11.1
+backoff==2.0.1
     # via -r ./batch/docker/requirements.in
-boto3==1.21.20
+boto3==1.22.4
     # via -r ./batch/docker/requirements.in
-botocore==1.24.20
+botocore==1.25.4
     # via
     #   awscli
     #   boto3
@@ -32,7 +32,7 @@ certifi==2021.10.8
     #   pyproj
     #   rasterio
     #   sentry-sdk
-click==8.0.4
+click==8.1.3
     # via
     #   -r ./batch/docker/requirements.in
     #   click-plugins
@@ -47,7 +47,7 @@ cligj==0.7.2
     # via
     #   fiona
     #   rasterio
-colorama==0.4.3
+colorama==0.4.4
     # via awscli
 cycler==0.11.0
     # via matplotlib
@@ -57,19 +57,21 @@ fiona==1.8.21
     # via
     #   -r ./batch/docker/requirements.in
     #   geopandas
+geojson-pydantic==0.3.4
+    # via -r ./batch/docker/requirements.in
 geopandas==0.10.2
     # via -r ./batch/docker/requirements.in
 greenlet==1.1.2
     # via sqlalchemy
 h5py==2.10.0
     # via -r ./batch/docker/requirements.in
-jmespath==0.10.0
+jmespath==1.0.0
     # via
     #   boto3
     #   botocore
 jsonschema==3.2.0
     # via -r ./batch/docker/requirements.in
-kiwisolver==1.4.0
+kiwisolver==1.4.2
     # via matplotlib
 matplotlib==3.3.4
     # via -r ./batch/docker/requirements.in
@@ -84,19 +86,23 @@ numpy==1.22.3
     #   pygeos
     #   rasterio
     #   snuggs
-pandas==1.4.1
+pandas==1.4.2
     # via
     #   -r ./batch/docker/requirements.in
     #   geopandas
-pg8000==1.24.1
+pg8000==1.26.1
     # via -r ./batch/docker/requirements.in
-pillow==9.0.1
+pillow==9.1.0
     # via matplotlib
 pyasn1==0.4.8
     # via rsa
+pydantic==1.9.0
+    # via
+    #   -r ./batch/docker/requirements.in
+    #   geojson-pydantic
 pygeos==0.12.0
     # via -r ./batch/docker/requirements.in
-pyparsing==3.0.7
+pyparsing==3.0.8
     # via
     #   matplotlib
     #   snuggs
@@ -114,7 +120,7 @@ python-dateutil==2.8.2
     #   matplotlib
     #   pandas
     #   pystac
-pytz==2021.3
+pytz==2022.1
     # via pandas
 pyyaml==5.4.1
     # via awscli
@@ -128,7 +134,7 @@ s3transfer==0.5.2
     #   boto3
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.5.7
+sentry-sdk==1.5.10
     # via
     #   -r ./batch/docker/requirements.in
     #   structlog-sentry
@@ -143,7 +149,7 @@ six==1.16.0
     #   python-dateutil
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.32
+sqlalchemy==1.4.36
     # via -r ./batch/docker/requirements.in
 structlog==21.5.0
     # via -r ./batch/docker/requirements.in
@@ -151,10 +157,12 @@ structlog-sentry==1.4.0
     # via -r ./batch/docker/requirements.in
 tensorflow-addons==0.16.1
     # via -r ./batch/docker/requirements.in
-tqdm==4.63.0
+tqdm==4.64.0
     # via -r ./batch/docker/requirements.in
 typeguard==2.13.3
     # via tensorflow-addons
+typing-extensions==4.2.0
+    # via pydantic
 urllib3==1.26.9
     # via
     #   -r ./batch/docker/requirements.in
