--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: flake8
 
   - repo: https://github.com/ambv/black
-    rev: 21.5b0
+    rev: 22.3.0
     hooks:
       - id: black
         args: [-tpy38, -q, --check]
