--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -15,13 +15,13 @@ attrs==21.4.0
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.23.4
+awscli==1.23.11
     # via -r ./batch/docker/requirements.in
 backoff==2.0.1
     # via -r ./batch/docker/requirements.in
-boto3==1.22.4
+boto3==1.22.11
     # via -r ./batch/docker/requirements.in
-botocore==1.25.4
+botocore==1.25.11
     # via
     #   awscli
     #   boto3
@@ -48,7 +48,9 @@ cligj==0.7.2
     #   fiona
     #   rasterio
 colorama==0.4.4
-    # via awscli
+    # via
+    #   awscli
+    #   kiwi-structlog-config
 cycler==0.11.0
     # via matplotlib
 docutils==0.15.2
@@ -70,6 +72,8 @@ jmespath==1.0.0
     #   boto3
     #   botocore
 jsonschema==3.2.0
+    # via -r ./batch/docker/requirements.in
+kiwi-structlog-config==0.1.8
     # via -r ./batch/docker/requirements.in
 kiwisolver==1.4.2
     # via matplotlib
@@ -102,7 +106,7 @@ pydantic==1.9.0
     #   geojson-pydantic
 pygeos==0.12.0
     # via -r ./batch/docker/requirements.in
-pyparsing==3.0.8
+pyparsing==3.0.9
     # via
     #   matplotlib
     #   snuggs
@@ -134,12 +138,14 @@ s3transfer==0.5.2
     #   boto3
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.5.10
+sentry-sdk==1.5.12
     # via
     #   -r ./batch/docker/requirements.in
     #   structlog-sentry
-shapely==1.8.1.post1
+shapely==1.8.2
     # via geopandas
+simplejson==3.17.6
+    # via kiwi-structlog-config
 six==1.16.0
     # via
     #   fiona
@@ -152,7 +158,9 @@ snuggs==1.4.7
 sqlalchemy==1.4.36
     # via -r ./batch/docker/requirements.in
 structlog==21.5.0
-    # via -r ./batch/docker/requirements.in
+    # via
+    #   -r ./batch/docker/requirements.in
+    #   kiwi-structlog-config
 structlog-sentry==1.4.0
     # via -r ./batch/docker/requirements.in
 tensorflow-addons==0.16.1
