--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ cligj==0.7.2
     # via
     #   fiona
     #   rasterio
+colorama==0.4.4
+    # via kiwi-structlog-config
 fiona==1.8.21
     # via geopandas
 geojson-pydantic==0.3.4
@@ -44,6 +46,8 @@ geopandas==0.10.2
 greenlet==1.1.2
     # via sqlalchemy
 h5py==2.10.0
+    # via -r requirements.in
+kiwi-structlog-config==0.1.8
     # via -r requirements.in
 munch==2.5.0
     # via fiona
@@ -61,7 +65,7 @@ pydantic==1.9.0
     # via
     #   -r requirements.in
     #   geojson-pydantic
-pyparsing==3.0.8
+pyparsing==3.0.9
     # via
     #   -r requirements.in
     #   snuggs
@@ -79,12 +83,14 @@ rasterio==1.2.10
     # via -r requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.5.11
+sentry-sdk==1.5.12
     # via
     #   -r requirements.in
     #   structlog-sentry
-shapely==1.8.1.post1
+shapely==1.8.2
     # via geopandas
+simplejson==3.17.6
+    # via kiwi-structlog-config
 six==1.16.0
     # via
     #   fiona
@@ -95,7 +101,9 @@ snuggs==1.4.7
 sqlalchemy==1.4.36
     # via -r requirements.in
 structlog==21.5.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   kiwi-structlog-config
 structlog-sentry==1.4.0
     # via -r requirements.in
 typing-extensions==4.2.0
