--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 exclude=build,.git
 ignore=E123,E128,E203,E402,E501,W503,E731,W601,E722,W606
 max-line-length=119
+per-file-ignores =
+    */__init__.py: F401
 
 [isort]
 multi_line_output=3
