--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -15,13 +15,13 @@ attrs==21.4.0
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.25.22
+awscli==1.25.24
     # via -r ./batch/docker/requirements.in
 backoff==2.1.2
     # via -r ./batch/docker/requirements.in
-boto3==1.24.22
+boto3==1.24.24
     # via -r ./batch/docker/requirements.in
-botocore==1.27.22
+botocore==1.27.24
     # via
     #   awscli
     #   boto3
@@ -89,6 +89,7 @@ numpy==1.23.0
     #   pandas
     #   pygeos
     #   rasterio
+    #   scipy
     #   snuggs
 packaging==21.3
     # via geopandas
@@ -139,6 +140,8 @@ s3transfer==0.6.0
     # via
     #   awscli
     #   boto3
+scipy==1.8.1
+    # via -r ./batch/docker/requirements.in
 scramp==1.4.1
     # via pg8000
 sentry-sdk==1.6.0
@@ -176,7 +179,7 @@ typeguard==2.13.3
     # via tensorflow-addons
 typing-extensions==4.3.0
     # via pydantic
-urllib3==1.26.9
+urllib3==1.26.10
     # via
     #   -r ./batch/docker/requirements.in
     #   botocore
