--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -15,13 +15,13 @@ attrs==21.4.0
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.25.31
+awscli==1.25.34
     # via -r ./batch/docker/requirements.in
 backoff==2.1.2
     # via -r ./batch/docker/requirements.in
-boto3==1.24.31
+boto3==1.24.34
     # via -r ./batch/docker/requirements.in
-botocore==1.27.31
+botocore==1.27.34
     # via
     #   awscli
     #   boto3
@@ -78,6 +78,8 @@ kiwi-structlog-config==0.1.8
 kiwisolver==1.4.4
     # via matplotlib
 matplotlib==3.3.4
+    # via -r ./batch/docker/requirements.in
+mpire==2.4.0
     # via -r ./batch/docker/requirements.in
 munch==2.5.0
     # via fiona
@@ -144,7 +146,7 @@ scipy==1.8.1
     # via -r ./batch/docker/requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.7.2
+sentry-sdk==1.8.0
     # via
     #   -r ./batch/docker/requirements.in
     #   structlog-sentry
@@ -159,13 +161,13 @@ six==1.16.0
     #   jsonschema
     #   munch
     #   python-dateutil
-slack-sdk==3.17.2
+slack-sdk==3.18.0
     # via -r ./batch/docker/requirements.in
 snuggs==1.4.7
     # via rasterio
 sqlalchemy==1.4.39
     # via -r ./batch/docker/requirements.in
-structlog==21.5.0
+structlog==22.1.0
     # via
     #   -r ./batch/docker/requirements.in
     #   kiwi-structlog-config
@@ -174,7 +176,9 @@ structlog-sentry==1.4.0
 tensorflow-addons==0.16.1
     # via -r ./batch/docker/requirements.in
 tqdm==4.64.0
-    # via -r ./batch/docker/requirements.in
+    # via
+    #   -r ./batch/docker/requirements.in
+    #   mpire
 typeguard==2.13.3
     # via tensorflow-addons
 typing-extensions==4.3.0
