chore(ci): print rebuild warning messages as last CI step

--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -78,3 +78,22 @@ jobs:
         env:
           SENTRY_ORG: 'tesselo'
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+
+  check_dependencies_change:
+    name: Check dependencies change
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v29.0.2
+      - name: Search for dependencies
+        run: |
+          if "batch/docker/requirements.txt" in steps.changed-files.outputs.all_changed_files; do
+            echo "Batch rebuild needed"
+          done
+          
+          if "requirements.txt" in steps.changed-files.outputs.all_changed_files; do
+            echo "Pixels rebuild needed"
+          done
